payment section done